--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,36 +1,21 @@
-cmake_minimum_required (VERSION 3.1)
-set (CMAKE_CXX_STANDARD 17)
+cmake_minimum_required(VERSION 3.1)
+set(CMAKE_CXX_STANDARD 17)
 
+project(SearchTest)
+enable_testing()
 
-project (SearchTest)
-set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
+set(Headers_${PROJECT_NAME}
+  Mocks.hpp
+)
 
+set(Sources_${PROJECT_NAME}
+  test1.cpp
+)
 
+add_executable(${PROJECT_NAME}
+  ${Headers_${PROJECT_NAME}}
+  ${Sources_${PROJECT_NAME}}
+)
 
-file(GLOB Sources "*.cpp")
-file(GLOB SourcesC "*.c")
-file(GLOB HeadersC "*.h")
-file(GLOB Headers "*.hpp")
-
-add_executable(${PROJECT_NAME} ${Sources} ${SourcesC} ${HeadersC} ${Headers})
-
-
-
-#add_subdirectory("../" "search")
-target_link_libraries(${PROJECT_NAME} Search )
-INCLUDE_DIRECTORIES( ${SEARCH_INCLUDE_DIRS} )
-
-
-
-# ICU
-#
-# command line add -DCMAKE_PREFIX_PATH=/usr/local/opt/icu4c
-# GUI add entry:    CMAKE_PREFIX_PATH     /usr/local/opt/icu4c
-#
-
-
-
-#### Boost ####
-FIND_PACKAGE( Boost 1.60 COMPONENTS system date_time iostreams REQUIRED )   # na windowsih še regex
-INCLUDE_DIRECTORIES( ${Boost_INCLUDE_DIR} )
-TARGET_LINK_LIBRARIES( ${PROJECT_NAME} ${Boost_LIBRARIES} )
+find_package(GTest REQUIRED)
+target_link_libraries(${PROJECT_NAME} Search GTest::gtest GTest::gmock GTest::gtest_main)
